  * general: fixed infinite recursion bug in KIconSelectAction
  * CUPS: temporarily disabled edition of page-ranges as it seems CUPS is
    buggy. I should find a workaround.
  * general (CUPS): enable some actions for jobs on remote hosts. It seems
    to work OK between my local LM-8.1 and a remote LM-7.2.

16/02/2002 Michael Goffioul <goffioul@imec.be>
  * CUPS: added direct Foomatic driver support (no need the all PPD package
    from foomatic anymore, driver are loaded directly from Foomatic)

17/02/2002 Michael GOffioul <goffioul@imec.be>
  * preview:
  	. better algorithm to find a preview object
	. more comprehensive error report
	. possibility to cancel printing even with external PS viewers
  * general: added the backend stuff for printer filtering, needs GUI
    -> allows to only show a selected set of printers

18/02/2002 Michael Goffioul <goffioul@imec.be>
  * general: simple printer filtering mechanism based on printer name
    and location regexp. Graphical configuration for printer name.

19/02/2002 Michael Goffioul <goffioul@imec.be>
  * general:
  	. completion of the printer filtering mechanism (added location
	  string filter)
	. notification system between applications when config file has
	  changed
	. possibility to open the main option dialog from print dialog
	  (for example to change the filter or default preview program)
	. added icon on push buttons when useful
	. changed plugin names to kdeprint_* (stripped the leading "lib")

20/02/2002 Michael Goffioul <goffioul@imec.be>
  * slave: prevent konqueror to consider a trailing slash as a directory
    specification (simply add a config entry in protocol file)
  * general: large UI standardization by making use of KDialogBase along
    with KGuiItem
  * kicker menu: possibility to open main Options Dialog from the menu

21/02/2002 Michael Goffioul <goffioul@imec.be>
  * general: splitted the printer state into enable/disable and start/stop
    and modified the GUI to reflect this