@@ -62,7 +62,6 @@
 KMCupsUiManager::KMCupsUiManager(QObject *parent, const char *name)
 : KMUiManager(parent,name)
 {
-	m_printdialogflags |= KMUiManager::Options;
 }
 
 KMCupsUiManager::~KMCupsUiManager()
