@@ -116,7 +116,6 @@ public:
 	virtual bool validateDbDriver(KMDBEntry *entry);
 
 	// configuration functions
-	virtual bool configure(QWidget *parent = 0);
 	bool invokeOptionsDialog(QWidget *parent = 0);
 
 	// server functions
